gitlab/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitlab
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: gitlab.xiaomo.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
